@@ -3,7 +3,7 @@ Title: Tools for creating D3 JavaScript directed network graphs from R
 Description: This packages is intended to make it easy to create D3 JavaScript
     directed network graphs from R using data frames.
 Version: 0.2.1
-Date: 2013-07-03
+Date: 2013-07-26
 Author: Christopher Gandrud
 Maintainer: Christopher Gandrud <christopher.gandrud@gmail.com>
 URL: http://christophergandrud.github.io/d3Network/
@@ -16,6 +16,7 @@ Imports:
     rjson,
     whisker
 Collate:
+    'DataDescriptions.R'
     'd3SimpleNetwork.R'
     'd3ForceNetwork.R'
     'd3Network.R'
