@@ -1,0 +1,19 @@
+#' A data file of nodes from Knuth's Les Miserables characters data base.
+#' 
+#'  @docType data
+#'  @source See Mike Bostock \url{http://bl.ocks.org/mbostock/4062045}.
+#'  @keywords datasets
+#'  @format A data set with 77 observations of 2 variables. 
+#'  @name MisNodes 
+#'
+NULL
+
+#' A data file of links from Knuth's Les Miserables characters data base.
+#' 
+#'  @docType data
+#'  @source See Mike Bostock \url{http://bl.ocks.org/mbostock/4062045}.
+#'  @keywords datasets
+#'  @format A data set with 254 observations of 3 variables. 
+#'  @name MisLinks 
+#'
+NULL
