@@ -1,0 +1,255 @@
+"source"	"target"	"value"
+"1"	1	0	1
+"2"	2	0	8
+"3"	3	0	10
+"4"	3	2	6
+"5"	4	0	1
+"6"	5	0	1
+"7"	6	0	1
+"8"	7	0	1
+"9"	8	0	2
+"10"	9	0	1
+"11"	11	10	1
+"12"	11	3	3
+"13"	11	2	3
+"14"	11	0	5
+"15"	12	11	1
+"16"	13	11	1
+"17"	14	11	1
+"18"	15	11	1
+"19"	17	16	4
+"20"	18	16	4
+"21"	18	17	4
+"22"	19	16	4
+"23"	19	17	4
+"24"	19	18	4
+"25"	20	16	3
+"26"	20	17	3
+"27"	20	18	3
+"28"	20	19	4
+"29"	21	16	3
+"30"	21	17	3
+"31"	21	18	3
+"32"	21	19	3
+"33"	21	20	5
+"34"	22	16	3
+"35"	22	17	3
+"36"	22	18	3
+"37"	22	19	3
+"38"	22	20	4
+"39"	22	21	4
+"40"	23	16	3
+"41"	23	17	3
+"42"	23	18	3
+"43"	23	19	3
+"44"	23	20	4
+"45"	23	21	4
+"46"	23	22	4
+"47"	23	12	2
+"48"	23	11	9
+"49"	24	23	2
+"50"	24	11	7
+"51"	25	24	13
+"52"	25	23	1
+"53"	25	11	12
+"54"	26	24	4
+"55"	26	11	31
+"56"	26	16	1
+"57"	26	25	1
+"58"	27	11	17
+"59"	27	23	5
+"60"	27	25	5
+"61"	27	24	1
+"62"	27	26	1
+"63"	28	11	8
+"64"	28	27	1
+"65"	29	23	1
+"66"	29	27	1
+"67"	29	11	2
+"68"	30	23	1
+"69"	31	30	2
+"70"	31	11	3
+"71"	31	23	2
+"72"	31	27	1
+"73"	32	11	1
+"74"	33	11	2
+"75"	33	27	1
+"76"	34	11	3
+"77"	34	29	2
+"78"	35	11	3
+"79"	35	34	3
+"80"	35	29	2
+"81"	36	34	2
+"82"	36	35	2
+"83"	36	11	2
+"84"	36	29	1
+"85"	37	34	2
+"86"	37	35	2
+"87"	37	36	2
+"88"	37	11	2
+"89"	37	29	1
+"90"	38	34	2
+"91"	38	35	2
+"92"	38	36	2
+"93"	38	37	2
+"94"	38	11	2
+"95"	38	29	1
+"96"	39	25	1
+"97"	40	25	1
+"98"	41	24	2
+"99"	41	25	3
+"100"	42	41	2
+"101"	42	25	2
+"102"	42	24	1
+"103"	43	11	3
+"104"	43	26	1
+"105"	43	27	1
+"106"	44	28	3
+"107"	44	11	1
+"108"	45	28	2
+"109"	47	46	1
+"110"	48	47	2
+"111"	48	25	1
+"112"	48	27	1
+"113"	48	11	1
+"114"	49	26	3
+"115"	49	11	2
+"116"	50	49	1
+"117"	50	24	1
+"118"	51	49	9
+"119"	51	26	2
+"120"	51	11	2
+"121"	52	51	1
+"122"	52	39	1
+"123"	53	51	1
+"124"	54	51	2
+"125"	54	49	1
+"126"	54	26	1
+"127"	55	51	6
+"128"	55	49	12
+"129"	55	39	1
+"130"	55	54	1
+"131"	55	26	21
+"132"	55	11	19
+"133"	55	16	1
+"134"	55	25	2
+"135"	55	41	5
+"136"	55	48	4
+"137"	56	49	1
+"138"	56	55	1
+"139"	57	55	1
+"140"	57	41	1
+"141"	57	48	1
+"142"	58	55	7
+"143"	58	48	7
+"144"	58	27	6
+"145"	58	57	1
+"146"	58	11	4
+"147"	59	58	15
+"148"	59	55	5
+"149"	59	48	6
+"150"	59	57	2
+"151"	60	48	1
+"152"	60	58	4
+"153"	60	59	2
+"154"	61	48	2
+"155"	61	58	6
+"156"	61	60	2
+"157"	61	59	5
+"158"	61	57	1
+"159"	61	55	1
+"160"	62	55	9
+"161"	62	58	17
+"162"	62	59	13
+"163"	62	48	7
+"164"	62	57	2
+"165"	62	41	1
+"166"	62	61	6
+"167"	62	60	3
+"168"	63	59	5
+"169"	63	48	5
+"170"	63	62	6
+"171"	63	57	2
+"172"	63	58	4
+"173"	63	61	3
+"174"	63	60	2
+"175"	63	55	1
+"176"	64	55	5
+"177"	64	62	12
+"178"	64	48	5
+"179"	64	63	4
+"180"	64	58	10
+"181"	64	61	6
+"182"	64	60	2
+"183"	64	59	9
+"184"	64	57	1
+"185"	64	11	1
+"186"	65	63	5
+"187"	65	64	7
+"188"	65	48	3
+"189"	65	62	5
+"190"	65	58	5
+"191"	65	61	5
+"192"	65	60	2
+"193"	65	59	5
+"194"	65	57	1
+"195"	65	55	2
+"196"	66	64	3
+"197"	66	58	3
+"198"	66	59	1
+"199"	66	62	2
+"200"	66	65	2
+"201"	66	48	1
+"202"	66	63	1
+"203"	66	61	1
+"204"	66	60	1
+"205"	67	57	3
+"206"	68	25	5
+"207"	68	11	1
+"208"	68	24	1
+"209"	68	27	1
+"210"	68	48	1
+"211"	68	41	1
+"212"	69	25	6
+"213"	69	68	6
+"214"	69	11	1
+"215"	69	24	1
+"216"	69	27	2
+"217"	69	48	1
+"218"	69	41	1
+"219"	70	25	4
+"220"	70	69	4
+"221"	70	68	4
+"222"	70	11	1
+"223"	70	24	1
+"224"	70	27	1
+"225"	70	41	1
+"226"	70	58	1
+"227"	71	27	1
+"228"	71	69	2
+"229"	71	68	2
+"230"	71	70	2
+"231"	71	11	1
+"232"	71	48	1
+"233"	71	41	1
+"234"	71	25	1
+"235"	72	26	2
+"236"	72	27	1
+"237"	72	11	1
+"238"	73	48	2
+"239"	74	48	2
+"240"	74	73	3
+"241"	75	69	3
+"242"	75	68	3
+"243"	75	25	3
+"244"	75	48	1
+"245"	75	41	1
+"246"	75	70	1
+"247"	75	71	1
+"248"	76	64	1
+"249"	76	65	1
+"250"	76	66	1
+"251"	76	63	1
+"252"	76	62	1
+"253"	76	48	1
+"254"	76	58	1
