@@ -1,0 +1,78 @@
+"name"	"group"
+"1"	"Myriel"	1
+"2"	"Napoleon"	1
+"3"	"Mlle.Baptistine"	1
+"4"	"Mme.Magloire"	1
+"5"	"CountessdeLo"	1
+"6"	"Geborand"	1
+"7"	"Champtercier"	1
+"8"	"Cravatte"	1
+"9"	"Count"	1
+"10"	"OldMan"	1
+"11"	"Labarre"	2
+"12"	"Valjean"	2
+"13"	"Marguerite"	3
+"14"	"Mme.deR"	2
+"15"	"Isabeau"	2
+"16"	"Gervais"	2
+"17"	"Tholomyes"	3
+"18"	"Listolier"	3
+"19"	"Fameuil"	3
+"20"	"Blacheville"	3
+"21"	"Favourite"	3
+"22"	"Dahlia"	3
+"23"	"Zephine"	3
+"24"	"Fantine"	3
+"25"	"Mme.Thenardier"	4
+"26"	"Thenardier"	4
+"27"	"Cosette"	5
+"28"	"Javert"	4
+"29"	"Fauchelevent"	0
+"30"	"Bamatabois"	2
+"31"	"Perpetue"	3
+"32"	"Simplice"	2
+"33"	"Scaufflaire"	2
+"34"	"Woman1"	2
+"35"	"Judge"	2
+"36"	"Champmathieu"	2
+"37"	"Brevet"	2
+"38"	"Chenildieu"	2
+"39"	"Cochepaille"	2
+"40"	"Pontmercy"	4
+"41"	"Boulatruelle"	6
+"42"	"Eponine"	4
+"43"	"Anzelma"	4
+"44"	"Woman2"	5
+"45"	"MotherInnocent"	0
+"46"	"Gribier"	0
+"47"	"Jondrette"	7
+"48"	"Mme.Burgon"	7
+"49"	"Gavroche"	8
+"50"	"Gillenormand"	5
+"51"	"Magnon"	5
+"52"	"Mlle.Gillenormand"	5
+"53"	"Mme.Pontmercy"	5
+"54"	"Mlle.Vaubois"	5
+"55"	"Lt.Gillenormand"	5
+"56"	"Marius"	8
+"57"	"BaronessT"	5
+"58"	"Mabeuf"	8
+"59"	"Enjolras"	8
+"60"	"Combeferre"	8
+"61"	"Prouvaire"	8
+"62"	"Feuilly"	8
+"63"	"Courfeyrac"	8
+"64"	"Bahorel"	8
+"65"	"Bossuet"	8
+"66"	"Joly"	8
+"67"	"Grantaire"	8
+"68"	"MotherPlutarch"	9
+"69"	"Gueulemer"	4
+"70"	"Babet"	4
+"71"	"Claquesous"	4
+"72"	"Montparnasse"	4
+"73"	"Toussaint"	5
+"74"	"Child1"	10
+"75"	"Child2"	10
+"76"	"Brujon"	4
+"77"	"Mme.Hucheloup"	8
